@@ -32,7 +32,7 @@ e20	"Keine GPX-Datei ausgewählt"
 
 l01	"BRouter-Konfiguration"
 l02	"Home-Ordner"
-l03	"BRouter-Version"
+l03	"BRouter-Server"
 l04	"Segments-Ordner"
 l05	"Profiles-Ordner"
 l06	"Customprofiles-Ordner"
@@ -49,6 +49,9 @@ r06	"Track-Stützstellen hinzufügen"
 r10	"GPX-Eingabedateien"
 r11	"GPX-Datei"
 r12	"GPX-Ausgabedatei-Präfix"
+r15	"GPX-Tracks konvertieren"
+r16	"GPX-Routen konvertieren"
+r17	"GPX-Wegpunkte konvertieren"
 
 b01	"Starten"
 b02	"Beenden"
@@ -62,12 +65,13 @@ m59	"%s nicht gestartet.\nTCP-Port '%s' nicht verfügbar"
 
 m60	"GPX-Erzeuger: '%s'"
 m61	"Konvertiere GPX-Datei '%s'"
-m62	"Konvertiere Track '%s' mit %d Trackpunkten"
-m63	"Konvertiere Wegpunkt '%s'"
-m64	"GPX-Datei '%s' geschrieben"
-m65	"Verbrauchte Zeit: %.3f s"
-m66	"Track-Statistik: %s"
-m67	"Konvertierung fehlgeschlagen"
+m62	"Konvertiere Wegpunkt '%s'"
+m63	"Konvertiere Track '%s' mit %d Trackpunkten"
+m64	"Konvertiere Route '%s' mit %d Routepunkten"
+m65	"GPX-Datei '%s' geschrieben"
+m66	"Verbrauchte Zeit: %.3f s"
+m67	"Track-Statistik: %s"
+m68	"Konvertierung fehlgeschlagen"
 
 l99	"Ausgabe-Konsole"
 c99	"Ausgabe-Konsole anzeigen"
