@@ -32,7 +32,7 @@ e20	"No GPX file selected"
 
 l01	"BRouter configuration"
 l02	"Home folder"
-l03	"BRouter version"
+l03	"BRouter server"
 l04	"Segments folder"
 l05	"Profiles folder"
 l06	"Customprofiles folder"
@@ -49,6 +49,9 @@ r06	"Add track support waypoints"
 r10	"GPX input files"
 r11	"GPX file"
 r12	"GPX output file prefix"
+r15	"Convert GPX tracks"
+r16	"Convert GPX routes"
+r17	"Convert GPX waypoints"
 
 b01	"Start"
 b02	"Quit"
@@ -62,12 +65,13 @@ m59	"%s not started.\nTCP port '%s' not available"
 
 m60	"GPX creator: '%s'"
 m61	"Convert GPX file  '%s'"
-m62	"Convert track '%s' with %d track points"
-m63	"Convert waypoint '%s'"
-m64	"GPX file '%s' written"
-m65	"Consumed time: %.3f s"
-m66	"Track statistics: %s"
-m67	"Conversion failed"
+m62	"Convert waypoint '%s'"
+m63	"Convert track '%s' with %d track points"
+m64	"Convert route '%s' with %d route points"
+m65	"GPX file '%s' written"
+m66	"Consumed time: %.3f s"
+m67	"Track statistics: %s"
+m68	"Conversion failed"
 
 l99	"Output console"
 c99	"Show output console"
