@@ -32,23 +32,26 @@ e20	"Aucun fichier GPX sélectionné"
 
 l01	"Configuration du BRouter"
 l02	"Dossier personnel"
-l03	"Version du BRouter"
+l03	"Serveur BRouter"
 l04	"Dossier «Segments»"
 l05	"Dossier «Profiles»"
 l06	"Dossier «Customprofiles»"
 l07	"Port TCP"
 l10	"Version d'exécutable Java"
 
-r01	"Profil de piste"
-r02	"Variante de piste"
-r02l	{"Original" "Variante 1" "Variante 2" "Variante 3"}
+r01	"Profil de trace"
+r02	"Alternative de trace"
+r02l	{"Original" "Alternative 1" "Alternative 2" "Alternative 3"}
 r03	"Ajouter des points de passage de direction"
-r04	"Ajouter des étiquettes de point de passage de direction"
+r04	"Ajouter des étiquettes aux points"
 r05	"Ajouter une numérotation aux étiquettes"
-r06	"Ajouter des points de support à la piste"
+r06	"Ajouter des points de support à la trace"
 r10	"Fichiers d'entrée GPX"
 r11	"Fichier GPX"
 r12	"Préfixe du fichier de sortie GPX"
+r15	"Convertir les traces GPX"
+r16	"Convertir les itinéraires GPX"
+r17	"Convertir les points de passage GPX"
 
 b01	"Démarrer"
 b02	"Quitter"
@@ -62,12 +65,13 @@ m59	"%s not started.\nTCP port '%s' not available"
 
 m60	"Créateur de GPX: '%s'"
 m61	"Convertir le fichier GPX '%s'"
-m62	"Convertir la piste '%s' avec %d points de piste"
-m63	"Convertir le point de passage '%s'"
-m64	"Fichier GPX '%s' généré"
-m65	"Temps consommé: %.3f s"
-m66	"Statistiques de piste: %s"
-m67	"La conversion a échoué"
+m62	"Convertir le point de cheminement '%s'"
+m63	"Convertir la trace '%s' avec %d points de trace"
+m64	"Convertir la route '%s' avec %d points de route"
+m65	"Fichier GPX '%s' généré"
+m66	"Temps consommé: %.3f s"
+m67	"Statistiques de trace: %s"
+m68	"La conversion a échoué"
 
 l99	"Console de sortie"
 c99	"Afficher la console de sortie"
