@@ -24,7 +24,7 @@ if {[encoding system] != "utf-8"} {
 package require Tk
 wm withdraw .
 
-set version "2026-01-11"
+set version "2026-02-23"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -362,6 +362,9 @@ set waypoint.export 0
 set waypoint.labels 0
 set waypoint.numbers 0
 set gpx.folder [pwd]
+set gpx.tracks 1
+set gpx.routes 1
+set gpx.points 1
 set gpx.prefix om
 
 set font.size [font configure TkDefaultFont -size]
@@ -414,96 +417,95 @@ wm protocol . WM_DELETE_WINDOW "set action 0"
 wm resizable . 0 0
 . configure -bd 5 -bg $colorBackground
 
-# Output console window
+# Output console window (".konsole" issue!)
 
 set console 0;			# Valid values: 0=hide, 1=show
 
-toplevel .console
-wm withdraw .console
-wm title .console "$title - [mc l99]"
-ttk::style configure .console -border $colorBorder -troughcolor $colorTrough
+toplevel .konsole
+wm withdraw .konsole
+wm title .konsole "$title - [mc l99]"
 
 set family [font configure TkFixedFont -family]
-foreach item {Consolas "Ubuntu Mono" "Noto Mono" "Liberation Mono" \
-	"SF Mono"} {
+foreach item {Consolas "Ubuntu Mono" "Noto Mono" "Liberation Mono" "SF Mono"} {
   if {$item ni [font families]} continue
   set family $item
   break
 }
 font create console_font -family $family -size ${console.font.size}
 
-text .console.txt -font console_font -wrap none -setgrid 1 \
+text .konsole.txt -font console_font -wrap none -setgrid 1 \
 	-state disabled -undo 0 -bg white \
-	-width 120 -xscrollcommand {.console.sbx set} \
-	-height 24 -yscrollcommand {.console.sby set}
-ttk::scrollbar .console.sbx -orient horizontal -command {.console.txt xview}
-ttk::scrollbar .console.sby -orient vertical   -command {.console.txt yview}
-grid .console.txt -row 1 -column 1 -sticky nswe
-grid .console.sby -row 1 -column 2 -sticky ns
-grid .console.sbx -row 2 -column 1 -sticky we
-grid columnconfigure .console 1 -weight 1
-grid rowconfigure    .console 1 -weight 1
+	-width 120 -xscrollcommand {.konsole.sbx set} \
+	-height 24 -yscrollcommand {.konsole.sby set}
+scrollbar .konsole.sbx -orient horizontal -command {.konsole.txt xview}
+scrollbar .konsole.sby -orient vertical   -command {.konsole.txt yview}
+grid .konsole.txt -row 1 -column 1 -sticky nswe
+grid .konsole.sby -row 1 -column 2 -sticky ns
+grid .konsole.sbx -row 2 -column 1 -sticky we
+grid columnconfigure .konsole 1 -weight 1
+grid rowconfigure    .konsole 1 -weight 1
+update idletasks
 
 if {${console.geometry} != ""} {
   lassign ${console.geometry} x y cols rows
-  if {$x > [expr [winfo vrootx .console]+[winfo vrootwidth .console]] ||
-      $x < [winfo vrootx .console]} {set x [winfo vrootx .console]}
-  wm positionfrom .console program
-  catch "wm geometry .console ${cols}x${rows}+$x+$y"
+  if {$x > [expr [winfo vrootx .konsole]+[winfo vrootwidth .konsole]] ||
+      $x < [winfo vrootx .konsole]} {set x [winfo vrootx .konsole]}
+  wm positionfrom .konsole program
+  catch "wm geometry .konsole ${cols}x${rows}+$x+$y"
 }
 
-bind .console.txt <Control-a> {%W tag add sel 1.0 end;break}
-bind .console.txt <Control-c> {tk_textCopy %W;break}
-bind .console <Control-plus>  {console_font_size_incr +1}
-bind .console <Control-minus> {console_font_size_incr -1}
-bind .console <Control-KP_Add>      {console_font_size_incr +1}
-bind .console <Control-KP_Subtract> {console_font_size_incr -1}
+bind .konsole.txt <Control-a> {%W tag add sel 1.0 end;break}
+bind .konsole.txt <Control-c> {tk_textCopy %W;break}
+bind .konsole <Control-plus>  {console_font_size_incr +1}
+bind .konsole <Control-minus> {console_font_size_incr -1}
+bind .konsole <Control-KP_Add>      {console_font_size_incr +1}
+bind .konsole <Control-KP_Subtract> {console_font_size_incr -1}
 
-bind .console <Configure> {
-  if {"%W" != ".console"} continue
+bind .konsole <Configure> {
+  if {"%W" != ".konsole"} continue
   scan [wm geometry %W] "%%dx%%d+%%d+%%d" cols rows x y
   set console.geometry "$x $y $cols $rows"
 }
 
 proc console_font_size_incr {incr} {
-  set px [.console.txt xview]
-  set py [.console.txt yview]
+  set px [.konsole.txt xview]
+  set py [.konsole.txt yview]
   set size [font configure console_font -size]
   incr size $incr
   if {$size < 5 || $size > 20} return
   font configure console_font -size $size
   set ::console.font.size $size
   update idletasks
-  .console.txt xview moveto [lindex $px 0]
-  .console.txt yview moveto [lindex $py 0]
+  .konsole.txt xview moveto [lindex $px 0]
+  .konsole.txt yview moveto [lindex $py 0]
 }
 
 proc console_write {text} {
-  .console.txt configure -state normal
+  .konsole.txt configure -state normal
   foreach item [split $text \n] {
     if {[string index $item 0] == "\r"} {
 	set item [string range $item 1 end]
-	.console.txt delete end-2l end-1l
+	.konsole.txt delete end-2l end-1l
     }
     if {[string index $item end] == "\b"} {
 	set item [string range $item 0 end-1]
     } else {
 	append item \n
     }
-    .console.txt insert end $item
+    .konsole.txt insert end $item
   }
-  .console.txt configure -state disabled
-  if {[winfo ismapped .console]} {.console.txt see end}
+  .konsole.txt configure -state disabled
+  if {[winfo ismapped .konsole]} {.konsole.txt see end}
 }
 
 proc console_show_hide {show} {
   if {$show} {
-    .console.txt see end
-    wm attributes .console -topmost 1
-    wm deiconify .console
-    wm attributes .console -topmost 0
+    .konsole.txt see end
+    wm attributes .konsole -topmost 1
+    wm deiconify .konsole
+    wm attributes .konsole -topmost 0
   } else {
-    wm withdraw .console
+    wm withdraw .konsole
   }
 }
 
@@ -672,7 +674,7 @@ pack .server_config -in .l -expand 1 -fill x -pady 1
 
 # BRouter server home folder
 
-labelframe .server_home -labelanchor nw -text [mc l02]:
+labelframe .server_home -labelanchor nw -text [mc l02]
 pack .server_home -in .l -expand 1 -fill x -pady 1
 entry .server_home_value -textvariable brouter_home \
 	-state readonly -takefocus 0 -highlightthickness 0
@@ -680,7 +682,7 @@ pack .server_home_value -in .server_home -expand 1 -fill x
 
 # BRouter server version jar archive
 
-labelframe .brouter_jar -labelanchor nw -text "[mc l03] $server_string:"
+labelframe .brouter_jar -labelanchor nw -text "[mc l03]: $server_string"
 pack .brouter_jar -in .l -expand 1 -fill x -pady 1
 entry .brouter_jar_value -textvariable brouter_jar \
 	-state readonly -takefocus 0 -highlightthickness 0
@@ -689,7 +691,7 @@ pack .brouter_jar_value -in .brouter_jar -expand 1 -fill x
 
 # BRouter segments folder
 
-labelframe .segments_folder -labelanchor nw -text [mc l04]:
+labelframe .segments_folder -labelanchor nw -text [mc l04]
 pack .segments_folder -in .l -expand 1 -fill x -pady 1
 entry .segments_folder_value -textvariable segments_folder \
 	-state readonly -takefocus 0 -highlightthickness 0
@@ -698,7 +700,7 @@ pack .segments_folder_value -in .segments_folder -expand 1 -fill x
 
 # BRouter profiles folder
 
-labelframe .profiles_folder -labelanchor nw -text [mc l05]:
+labelframe .profiles_folder -labelanchor nw -text [mc l05]
 pack .profiles_folder -in .l -expand 1 -fill x -pady 1
 entry .profiles_folder_value -textvariable profiles_folder \
 	-state readonly -takefocus 0 -highlightthickness 0
@@ -707,7 +709,7 @@ pack .profiles_folder_value -in .profiles_folder -expand 1 -fill x
 
 # BRouter custom profiles folder
 
-labelframe .customs_folder -labelanchor nw -text [mc l06]:
+labelframe .customs_folder -labelanchor nw -text [mc l06]
 pack .customs_folder -in .l -expand 1 -fill x -pady 1
 entry .customs_folder_value -textvariable customs_folder \
 	-state readonly -takefocus 0 -highlightthickness 0
@@ -716,7 +718,7 @@ pack .customs_folder_value -in .customs_folder -expand 1 -fill x
 
 # BRouter TCP port number
 
-labelframe .tcp_port -labelanchor w -text [mc l07]:
+labelframe .tcp_port -labelanchor w -text [mc l07]
 entry .tcp_port_value -textvariable tcp.port \
 	-width 6 -justify center
 tooltip .tcp_port_value "1024 ≤ TCP-Port ≤ 65535"
@@ -831,6 +833,16 @@ pack .gpx_prefix_value -in .gpx_prefix \
   return 1
 }
 
+# Convert tracks, routes, waypoints
+
+checkbutton .gpx_tracks -text [mc r15] -variable gpx.tracks
+checkbutton .gpx_routes -text [mc r16] -variable gpx.routes
+checkbutton .gpx_points -text [mc r17] -variable gpx.points
+
+foreach item {tracks routes points} {
+  pack .gpx_$item -in .r -expand 1 -fill x -pady {2 0}
+}
+
 # Track profile
 
 set list [glob -nocomplain -types f -directory \
@@ -928,11 +940,11 @@ checkbutton .output -text [mc c99] \
 pack .output -expand 1 -fill x
 console_show_hide ${console.show}
 
-wm protocol .console WM_DELETE_WINDOW {.output invoke}
-bind .console <Double-ButtonRelease-3> {.output invoke}
+wm protocol .konsole WM_DELETE_WINDOW {.output invoke}
+bind .konsole <Double-ButtonRelease-3> {.output invoke}
 # Map/Unmap events are generated by Windows only!
-bind .console <Unmap> {if {"%W" == ".console"} {set console.show 0}}
-bind .console <Map>   {if {"%W" == ".console"} {set console.show 1}}
+bind .konsole <Unmap> {if {"%W" == ".konsole"} {set console.show 0}}
+bind .konsole <Map>   {if {"%W" == ".konsole"} {set console.show 1}}
 
 # --- End of main window right column
 
@@ -965,7 +977,7 @@ proc save_script_settings {} {
 	console.show console.geometry console.font.size \
 	tcp.port track.profile track.variant \
 	turnpoint.export waypoint.export waypoint.labels waypoint.numbers \
-	gpx.folder gpx.prefix
+	gpx.folder gpx.prefix gpx.tracks gpx.routes gpx.points
 }
 
 # Increase/decrease font size
@@ -1038,7 +1050,7 @@ proc brouter_start {} {
   lappend command $::java_cmd @$::tmpdir/java_args
 
   # Uncomment to write BRouter's arguments to console
-  #foreach item $params {cputs  $item}
+  #foreach item $params {cputs $item}
 
   # Uncomment to write BRouter's arguments to file
   #set fd [open brouter.arguments w]
@@ -1075,9 +1087,7 @@ proc brouter_start {} {
 
   proc tsend {script} "return \[thread::send $tid \$script\]"
 
-  set rc [tsend {catch {open "| $command 2>@1" r} fd}]
-
-  if {$rc} {
+  if {[tsend {catch {open "| $command 2>@1" r} fd}]} {
     set result [tsend "set fd"]
     thread::release $tid
     error_message [mc m55 "$text: $result"] return
@@ -1086,11 +1096,12 @@ proc brouter_start {} {
 
   tsend {
     proc cputs {text} "thread::send -async $sid \"console_write {\$text}\""
+    proc fevent {fd} {
+      while {[gets $fd line] >= 0} {cputs "\[SRV\] $line"}
+      set ::ready 1
+    }
     fconfigure $fd -blocking 0 -buffering line -translation lf
-    fileevent $fd readable "
-      while {\[gets $fd line\] >= 0} {cputs \"\\\[SRV\\\] \$line\"}
-      set ready 1
-    "
+    fileevent $fd readable [list fevent $fd]
     vwait ready; # Wait until server is ready
   }
 
@@ -1113,7 +1124,7 @@ proc brouter_stop {} {
   switch $::tcl_platform(os) {
     "Windows NT" {catch {exec TASKKILL /F /PID $pid}}
     "Linux"	 -
-    "Darwin"	 {catch {exec kill -SIGTERM $pid}}
+    "Darwin"	 {catch {exec kill -SIGKILL $pid}}
   }
   cputi [mc m52 $pid $exe]
   namespace delete brouter
@@ -1133,15 +1144,20 @@ set wid [thread::create -joinable "
 
 proc wsend {script} "return \[thread::send $wid \$script\]"
 
-foreach item {e17 m60 m61 m62 m63 m64 m65 m66 m67} \
+foreach item {e17 m60 m61 m62 m63 m64 m65 m66 m67 m68} \
 	{wsend "set $item \"[mc $item]\""}
 
 foreach item {cputi cputx get_shell_command} \
-	{wsend "proc $item {*}[lmap name {args body} {info $name $item}]"} 
+	{wsend "proc $item {*}[lmap name {args body} {info $name $item}]"}
 
 wsend {
 
 proc cputs {text} "thread::send -async $sid \"console_write {\$text}\""
+
+lmap {id name} $icons {
+  array set icon_ids [list $id $name]
+  array set icon_names [list $name $id]
+}
 
 # Convert GPX file QMapShack -> OruxMaps
 
@@ -1166,20 +1182,35 @@ proc convert_gpx_file {file} {
   regsub -all {<ql:key>.*?</ql:key>} $data {} data
   regsub -all {<ql:bubble>.*?/>} $data {} data
 
+  # Convert waypoints of GPX file separately
+  set result [convert_gpx_waypoints $data]
+
   # Convert tracks of GPX file separately
-  set result ""
-  while {[regexp {^(.*?)(<trk>.*?</trk>)(.*)$} $data {} head body tail]} {
-    append result [convert_gpx_waypoints $head]
-    set data [convert_gpx_track $body]
-    if {![string length $data]} {
-      cputi $::m67
+  set next $data
+  while {[regexp {^(.*?)(<trk>.*?</trk>)(.*)$} $next {} head body tail]} {
+    set reply [convert_gpx_track $body]
+    if {![string length $reply]} {
+      cputi $::m68
       thread::send $::sid "set wdone 1"
       return
     }
-    append result $data
-    set data $tail
+    append result $reply
+    set next $tail
   }
-  append result [convert_gpx_waypoints $data]
+
+  # Convert routes of GPX file separately
+  set next $data
+  while {[regexp {^(.*?)(<rte>.*?</rte>)(.*)$} $next {} head body tail]} {
+    set reply [convert_gpx_route $body]
+    if {![string length $reply]} {
+      cputi $::m68
+      thread::send $::sid "set wdone 1"
+      return
+    }
+    append result $reply
+    set next $tail
+  }
+
   # Remove empty lines
   regsub -line -all {^\s*$\n?} $result {} result
 
@@ -1192,8 +1223,8 @@ proc convert_gpx_file {file} {
   set stop [clock milliseconds]
   set time [expr ($stop-$start)/1000.]
 
-  cputx [format $::m65 $time]
-  cputi [format $::m64 $file]
+  cputx [format $::m66 $time]
+  cputi [format $::m65 $file]
 
   thread::send $::sid "set wdone 1"
 }
@@ -1206,16 +1237,15 @@ proc convert_gpx_waypoints {data} {
   while {[regexp {^(.*?)(<wpt.*?</wpt>)(.*)$} $data {} head body tail]} {
     append result $head
     regsub {^.*<sym>(.*?)</sym>.*$} $body {\1} sym
-    set id [get_icon_id $sym]
+    set id [lindex [array get ::icon_names $sym] 1]
     if {$id != ""} {
       regsub {^.*<name>(.*?)</name>.*$} $body {\1} name
-      cputx "[format $::m63 $name] ..."
+      cputx "[format $::m62 $name] ..."
       set string {<extensions><om:oruxmapsextensions xmlns:om="http://www.oruxmaps.com/oruxmapsextensions/1/0"><om:ext type="ICON" subtype="0">}
       append string $id
       append string {</om:ext></om:oruxmapsextensions></extensions>}
       regsub {(</wpt>)} $body "$string\\1" body
     }
-    append result $body
     regsub {^.*<sym>(.*?)</sym>.*$} $body {\1} sym
     set data $tail
   }
@@ -1227,16 +1257,12 @@ proc convert_gpx_waypoints {data} {
 # Convert GPX track QMapShack -> OruxMaps
 
 proc convert_gpx_track {track} {
-  upvar #0 tcp.port port track.profile profile track.variant variant \
-	waypoint.export waypoints turnpoint.export turnpoints \
-	waypoint.labels labels waypoint.numbers numbers
-
   # Get track name
   regsub {^.*?(<trk>.*?<trkseg>).*$} $track {\1} trkhead
   regsub {^.*?<name>(.*?)</name>.*$} $trkhead {\1} trkname
   regsub {^(?:<!\[CDATA\[)(.*?)(?:\]\]>)$} $trkname {\1} trkname
 
-  # Collect constraint track waypoints
+  # Collect constraint track points
   set trkpts [regexp -inline -all {<trkpt.*?</trkpt>} $track]
   set lonlats {}
   foreach item $trkpts {
@@ -1245,9 +1271,49 @@ proc convert_gpx_track {track} {
     set lat [regsub {.*lat="(.*?)".*} $item {\1}]
     lappend lonlats "$lon,$lat"
   }
-  cputx "[format $::m62 $trkname [llength $lonlats]] ..."
+  cputx "[format $::m63 $trkname [llength $lonlats]] ..."
 
-  # Let BRouter generate track from constraint track waypoints
+  set result [brouter_query $lonlats]
+  if {$result == ""} {return ""}
+
+  # Replace BRouter generated track header by QMS track header
+  regsub "<trk>.*?<trkseg>" $result $trkhead result
+  # Remove BRouter track encapsulation
+  regsub {^.*creator.*?>(.*)</gpx>.*$} $result {\1} result
+  return $result
+}
+
+# Convert GPX route QMapShack -> OruxMaps
+
+proc convert_gpx_route {route} {
+  # Get route name
+  regsub {^.*?<name>(.*?)</name>.*$} $route {\1} rtename
+  regsub {^(?:<!\[CDATA\[)(.*?)(?:\]\]>)$} $rtename {\1} rtename
+
+  # Collect route points
+  set rtepts [regexp -inline -all {<rtept.*?</rtept>} $route]
+  set lonlats {}
+  foreach item $rtepts {
+    set lon [regsub {.*lon="(.*?)".*} $item {\1}]
+    set lat [regsub {.*lat="(.*?)".*} $item {\1}]
+    lappend lonlats "$lon,$lat"
+  }
+  cputx "[format $::m64 $rtename [llength $lonlats]] ..."
+
+  set result [brouter_query $lonlats]
+  if {$result == ""} {return ""}
+
+  # Remove BRouter track encapsulation
+  regsub {^.*creator.*?>(.*)</gpx>.*$} $result {\1} result
+  return $result
+}
+
+proc brouter_query {lonlats} {
+  upvar #0 tcp.port port track.profile profile track.variant variant \
+	waypoint.export waypoints turnpoint.export turnpoints \
+	waypoint.labels labels waypoint.numbers numbers
+
+  # Let BRouter generate track from lonlat points
   set url "http://127.0.0.1:$port/brouter"
   append url ?profile=$profile
   append url &alternativeidx=$variant
@@ -1274,28 +1340,32 @@ proc convert_gpx_track {track} {
   lappend command -K $cfg
   cputs [get_shell_command $command]
 
-  set rc [catch {open "| $command 2>@1" r} fd]
-  if {$rc} {
+  if {[catch {open "| $command 2>@1" r} fd]} {
     cputx $::e16
     cputx $fd
-    return
+    return ""
   }
 
-  # Prevent script from becoming unresponsive 
+  # Prevent script from becoming unresponsive
   # when BRouter is runnning long time
 
-  set ::curl_data {}
+  upvar #0 data data
+  set data {}
+
+  proc fevent {fd} {
+    while {[gets $fd line] >= 0} {lappend ::data $line}
+    if {![eof $fd]} return
+    close $fd
+    set ::eof 1
+  }
+
   fconfigure $fd -blocking 0 -buffering full -buffersize 65536
-  fileevent $fd readable "
-    while {\[gets $fd line\] >= 0} {lappend ::curl_data \"\$line\"}
-    if {\[eof $fd\]} {close $fd; set curl_ready 1}
-    "
-  vwait curl_ready
-  set data [join $::curl_data \n]
-  unset ::curl_ready ::curl_data
+  fileevent $fd readable [list fevent $fd]
+  vwait eof
 
   after 100;	# Prioritize possible BRouter message(s).
 
+  set data [join $data \n]
   if {![regexp {^\s*<.*} $data]} {
     if {$data == ""} {cputw $::e17} \
     else {cputs "\[SRV\] $data"}
@@ -1312,7 +1382,7 @@ proc convert_gpx_track {track} {
 
   # BRouter generated track statistics
   regsub {.*<!-- (.*?) -->.*} $data {\1} info
-  if {$info != ""} {cputx [format $::m66 $info]}
+  if {$info != ""} {cputx [format $::m67 $info]}
 
   # Map BRouter waypoints to OM waypoints
   # Collect constraint track waypoints
@@ -1335,7 +1405,7 @@ proc convert_gpx_track {track} {
 	$body {} id]} {
       # OM direction waypoint
       lappend lonlats [regsub {.*lat="(.*?)".*lon="(.*?)".*} $body {\2,\1}]
-      set name [get_icon_name $id]
+      set name [lindex [array get ::icon_ids $id] 1]
       if {$name == ""} {set name Icon$id}
       set string "\n<sym>$name</sym>\n"
       if {$numbers} {set name "[format $f [incr n]] $name"}
@@ -1343,14 +1413,14 @@ proc convert_gpx_track {track} {
       regsub {(<extensions>)} $body "$string\\1" body
     } elseif {[regsub {.*<type>(from)</type>.*} $body {38} id]} {
       # OM starting waypoint
-      set name [get_icon_name $id]
+      set name [lindex [array get ::icon_ids $id] 1]
       if {$name == ""} {set name Icon$id}
       set string "<sym>$name</sym>\n"
       if {$labels} {append string "<name>$name</name>\n"}
       regsub {<name>.*</type>} $body $string body
     } elseif {[regsub {.*<type>(to)</type>.*} $body {15} id]} {
       # OM finishing waypoint
-      set name [get_icon_name $id]
+      set name [lindex [array get ::icon_ids $id] 1]
       if {$name == ""} {set name Icon$id}
       set string "<sym>$name</sym>\n"
       if {$labels} {append string "<name>$name</name>\n"}
@@ -1384,27 +1454,7 @@ proc convert_gpx_track {track} {
     append result $body
   }
   append result $tail
-
-  # Replace BRouter generated track header by QMS track header
-  regsub "<trk>.*?<trkseg>" $result $trkhead result
-  # Remove BRouter track encapsulation
-  regsub {^.*creator.*?>(.*)</gpx>.*$} $result {\1} result
-
   return $result
-}
-
-# Get icon name from id
-
-proc get_icon_name {id} {
-  set i [lsearch -exact $::icons $id]
-  return [expr {($i < 0) ? "" : [lindex $::icons $i+1]}]
-}
-
-# Get icon id from name
-
-proc get_icon_id {name} {
-  set i [lsearch -exact $::icons $name]
-  return [expr {($i < 0) ? "" : [lindex $::icons $i-1]}]
 }
 
 }; # End of wsend
@@ -1421,7 +1471,7 @@ proc run_convert_job {} {
     set ::gpx_files [lassign $::gpx_files file]
     set script ""
     foreach item {
-        gpx.prefix tcp.port track.profile track.variant \
+	gpx.prefix tcp.port track.profile track.variant \
 	waypoint.export turnpoint.export \
 	waypoint.labels waypoint.numbers} {
 	append script "set $item {[set ::$item]};"
@@ -1499,11 +1549,11 @@ wm withdraw .
 
 # Wait until output console window was closed
 
-if {[winfo ismapped .console]} {
+if {[winfo ismapped .konsole]} {
   console_write "\n[mc m99]\b"
-  wm protocol .console WM_DELETE_WINDOW {}
-  bind .console <ButtonRelease-3> {destroy .console}
-  tkwait window .console
+  wm protocol .konsole WM_DELETE_WINDOW {}
+  bind .konsole <ButtonRelease-3> {destroy .konsole}
+  tkwait window .konsole
 }
 
 # Save settings to folder ini_folder
