@@ -1,3 +1,12 @@
+2026-02-23
+
+- Fixed output console issues with macOS operating system:
+  o horizontal scroll bar may be missing
+  o duplicate title bar due to reserved name ".console"
+- Added processing of routes
+- Added ability to select what to convert:
+  tracks, routes, waypoints
+
 2026-01-11
 
 - Extended scripts for macOS operating system:
